Fix Maven build: remove Spring Boot plugin from parent POM

--- a/pom.xml
+++ b/pom.xml
@@ -39,13 +39,6 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    <!-- Le plugin Spring Boot est défini uniquement dans le module api -->
 
 </project> 
