Fix XML syntax error in framework/pom.xml

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -55,7 +56,7 @@
     </dependency>
   </dependencies>
 
-  <!-- ✅ On supprime le plugin spring-boot ici -->
+  <!-- ✅ Pas de plugin spring-boot ici, c'est juste une librairie -->
 
 </project>
  
