Update MySQL configuration for Heroku add-ons auto-detection

--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,12 +1,9 @@
 # Production Configuration for Heroku
 server.port=${PORT:8080}
 
-# ClearDB MySQL Configuration (Heroku Add-on)
-spring.datasource.url=${CLEARDB_DATABASE_URL}
+# MySQL Configuration (Heroku Add-on) - Auto-detection
+spring.datasource.url=${JAWSDB_URL:${CLEARDB_DATABASE_URL:${DATABASE_URL:}}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Alternative configuration if using JAWSDB
-# spring.datasource.url=${JAWSDB_URL}
 
 # JPA / Hibernate Configuration for Production
 spring.jpa.hibernate.ddl-auto=update
