Fix database configuration for JawsDB MySQL

--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # Production Configuration for Heroku
 server.port=${PORT:8080}
 
-# MySQL Configuration (Heroku Add-on) - Auto-detection
+# MySQL Configuration (Heroku Add-on) - Must have MySQL add-on installed
 spring.datasource.url=${JAWSDB_URL:${CLEARDB_DATABASE_URL:${DATABASE_URL:}}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
