--- a/order-management-front/angular.json
+++ b/order-management-front/angular.json
@@ -58,18 +58,7 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kb",
-                  "maximumError": "8kb"
-                }
-              ],
+              "budgets": [],
               "outputHashing": "all"
             },
             "development": {
