--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -11,6 +11,21 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=false
 
+# Pool de connexions optimisé pour JawsDB (plan gratuit)
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+
+# Initialisation du schéma et des données
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.continue-on-error=true
+spring.sql.init.separator=;
+spring.jpa.defer-datasource-initialization=true
+
 # JWT Configuration
 jwt.expiration=86400000
 jwt.secret=${JWT_SECRET:byfiuezgfueyizfhyfehcgezgfzegfyzuefuyizedf}
