--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -5,11 +5,11 @@ server.port=${PORT:8080}
 spring.datasource.url=${JAWSDB_URL:${CLEARDB_DATABASE_URL:${DATABASE_URL:}}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA / Hibernate Configuration for Production
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=false
+# JPA / Hibernate Configuration for Production  
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 # Pool de connexions optimisé pour JawsDB (plan gratuit)
 spring.datasource.hikari.maximum-pool-size=5
@@ -24,7 +24,8 @@ spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.continue-on-error=true
 spring.sql.init.separator=;
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
 
 # JWT Configuration
 jwt.expiration=86400000
