--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -6,7 +6,7 @@ spring.datasource.url=${JAWSDB_URL:${CLEARDB_DATABASE_URL:${DATABASE_URL:}}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration for Production  
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -18,14 +18,13 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=600000
 
-# Initialisation du schéma et des données
+# Initialisation forcée du schéma et des données
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
-spring.sql.init.continue-on-error=true
+spring.sql.init.continue-on-error=false
 spring.sql.init.separator=;
-spring.jpa.defer-datasource-initialization=false
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.jpa.defer-datasource-initialization=true
 
 # JWT Configuration
 jwt.expiration=86400000
