Fix: Resolve database initialization conflicts causing app crash

--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -6,10 +6,10 @@ spring.datasource.url=${JAWSDB_URL:${CLEARDB_DATABASE_URL:${DATABASE_URL:}}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration for Production  
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 # Pool de connexions optimisé pour JawsDB (plan gratuit)
 spring.datasource.hikari.maximum-pool-size=5
@@ -18,13 +18,8 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=600000
 
-# Initialisation forcée du schéma et des données
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
-spring.sql.init.data-locations=classpath:data.sql
-spring.sql.init.continue-on-error=false
-spring.sql.init.separator=;
-spring.jpa.defer-datasource-initialization=true
+# Désactiver l'initialisation SQL pour éviter les conflits
+spring.sql.init.mode=never
 
 # JWT Configuration
 jwt.expiration=86400000
@@ -35,7 +30,7 @@ logging.level.org.springframework=WARN
 logging.level.com.arem=INFO
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
-logging.level.root=INFO
+logging.level.root=WARN
 
 # Disable H2 console in production
 spring.h2.console.enabled=false
