--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 server.port=${PORT:8080}
 
 # MySQL Configuration (Heroku Add-on) - Must have MySQL add-on installed
-spring.datasource.url=${JAWSDB_URL:${CLEARDB_DATABASE_URL:${DATABASE_URL:}}}
+spring.datasource.url=${JAWSDB_URL:${CLEARDB_DATABASE_URL:${DATABASE_URL:jdbc:mysql://ivgz2rnl5rh7sphb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/zoq9jk4uxb6r9adf?user=wunsilwmj04x8v02&password=if4a1rndx178p4zy}}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration for Production  
@@ -12,11 +12,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
 # Pool de connexions optimisé pour JawsDB (plan gratuit)
-spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.maximum-pool-size=3
 spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=180000
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.leak-detection-threshold=60000
 
 # Désactiver l'initialisation SQL pour éviter les conflits
 spring.sql.init.mode=never
@@ -26,10 +27,12 @@ jwt.expiration=86400000
 jwt.secret=${JWT_SECRET:byfiuezgfueyizfhyfehcgezgfzegfyzuefuyizedf}
 
 # Logging Configuration for Production
-logging.level.org.springframework=WARN
+logging.level.org.springframework=INFO
 logging.level.com.arem=INFO
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
 logging.level.root=WARN
 
 # Disable H2 console in production
